# aplicacao-back-end

./: .gitignore  BancoDeDados.db  CMakeLists.txt  README.md  main.c
controller/: API.c  API.h  JSON.c  JSON.h  bd.c  bd.h  rotas.c  rotas.h
lib/: sqlite3.lib
lib/libmicrohttpd/lib/: libmicrohttpd.la
lib/libmicrohttpd/lib/pkgconfig/: libmicrohttpd.pc
scripts/: cadastro.c  cadastro.h  dados.c  dados.h  emprestimo.c  emprestimo.h  extrato.c  extrato.h  investimento.c  investimento.h  login.c  login.h  pix.c  pix.h  ted.c  ted.h  transferencia.c  transferencia.h  validacaoCpf.c  validacaoCpf.h
